# lunar-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md
.github/workflows/: Build.yml  audit.yml  docs.yml  rust-clippy.yml
benches/: convert.rs
docs/: DESIGN.md  multi-calendar-template.md  next-iteration-index.md  roadmap.md  tyme4rs-gap-analysis-2026-07-07-v1.5.md  tyme4rs-gap-analysis-2026-07-07.md
docs/tasks/: 01-phase1-i18n-closure.md  02-phase2-typed-api-expansion.md  03-phase3-event-model-expansion.md  04-phase4-hijri-support.md  05-phase4-1-multi-calendar-ecosystem.md  06-phase4-2-multi-calendar-shared-abstractions.md  07-phase4-3-public-calendar-traits.md  08-phase4-4-minguo-calendar.md  09-phase4-5-minguo-i18n.md  10-phase4-6-thai-solar-calendar.md  100-phase-next-foto-tao-bool-getter-compatibility.md  102-phase-next-differential-matrix-expansion.md  103-phase-next-date-key-lookup-optimization.md  104-phase-next-foto-tao-year-month-getter-compatibility.md  (+94 more)
scripts/: run_differential_self_check.sh  run_tyme4rs_diff_check.sh
src/: anno_lucis.rs  armenian.rs  assyrian.rs  auc.rs  bengali.rs  byzantine.rs  coptic.rs  culture.rs  dangi.rs  differential_support.rs  eight_char.rs  error.rs  ethiopian.rs  event.rs  fasli.rs  festival.rs  foto.rs  foto_util.rs  foto_util_data.rs  foto_util_maps.rs  fu.rs  hijri.rs  hispanic_era.rs  holiday.rs  holiday_data.rs  holiday_util.rs  holocene.rs  i18n.rs  japanese.rs  jd.rs  jieqi.rs  juche.rs  julian.rs  key_index.rs  koki.rs  lib.rs  lunar.rs  lunar_month.rs  lunar_time.rs  lunar_week.rs  (+28 more)
src/yun/: da_yun.rs  (+5 more)
tests/: anno_lucis.rs  armenian.rs  assyrian.rs  auc.rs  bengali.rs  byzantine.rs  coptic.rs  dangi.rs  differential.rs  differential_protocol.rs  eight_char.rs  ethiopian.rs  fasli.rs  foto.rs  hijri.rs  hispanic_era.rs  holocene.rs  i18n.rs  japanese.rs  jieqi.rs  juche.rs  julian.rs  koki.rs  lunar.rs  lunar_core.rs  minguo.rs  multi_calendar_ranges.rs  multi_calendar_traits.rs  nanakshahi.rs  phase1.rs  phase2_typed.rs  phase3_events.rs  rab_byung.rs  rattanakosin.rs  rumi.rs  saka.rs  seleucid.rs  solar.rs  tao.rs  thai_buddhist.rs  (+2 more)
(+8 files in other folders)
